LB-1942: rename to ScrollContainer, fix no-scrollbar duplication, apply vertical scroll to Track page, drop single-row logic, update grid columns to 12em

--- a/frontend/css/sass/entity-pages.scss
+++ b/frontend/css/sass/entity-pages.scss
@@ -203,7 +203,7 @@ $white-gradient: linear-gradient(to bottom, transparent, #fff 65%);
           grid-gap: 1.5em;
           grid-auto-flow: row;
           justify-items: center;
-          grid-template-columns: repeat(auto-fill, minmax(190px, max-content));
+          grid-template-columns: repeat(auto-fill, minmax(12em, 1fr));
           // Grid flows naturally without row constraints
 
           .cover-art {
