--- a/frontend/css/sass/scroll-container.scss
+++ b/frontend/css/sass/scroll-container.scss
@@ -64,20 +64,19 @@ $scrollbar-thumb-color-dark: color.adjust(
     display: none;
   }
 
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
+
   // HORIZONTAL specific
   &.horizontal {
     .horizontal-scroll {
       overflow-x: auto;
       @include small-scrollbar;
-      &.no-scrollbar {
-        /* Hide the scrollbar: */
-        -ms-overflow-style: none; /* Internet Explorer and Edge */
-        scrollbar-width: none; /* Firefox */
-        &::-webkit-scrollbar {
-          /* Chrome, Safari and Opera */
-          display: none;
-        }
-      }
     }
     .nav-button {
       top: 0;
@@ -101,14 +100,6 @@ $scrollbar-thumb-color-dark: color.adjust(
       max-height: 56.9rem;
       overflow-y: auto;
       overflow-x: hidden;
-      &.no-scrollbar {
-        -ms-overflow-style: none;
-        scrollbar-width: none;
-        &::-webkit-scrollbar {
-          /* Chrome, Safari and Opera */
-          display: none;
-        }
-      }
     }
     .nav-button {
       left: 0;
